fix: navbar collapse

--- a/app/(root)/preorder/PreOrderPage.module.css
+++ b/app/(root)/preorder/PreOrderPage.module.css
@@ -2,7 +2,7 @@
   padding: 4rem;
   background: #f8f8f8;
   display: flex;
-  min-height: 100dvh;
+  min-height: calc(100dvh - 4rem);
   justify-content: center;
 }
 
